--- a/파일명2.html
+++ b/파일명2.html
@@ -30,5 +30,7 @@ input 태그입니다: <input type="text" />
 button 태그입니다: <button> 버튼입니다</button>
 <hr>
 textarea 태그입니다: <textarea>나는 무엇일까요?</textarea>
+<hr>
+textarea 태그입니다: <textarea>나는 무엇일까요?</textarea>
 </body>
 </html>
