--- a/파일명2.html
+++ b/파일명2.html
@@ -1,36 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <!-- 구역을 나누는 태그들 -->
-<div>나는 구역을 나누죠</div>
-<p>나는 문단이에요</p>
-<ul>
-    <li> bullet point!1 </li>
-    <li> bullet point!2 </li>
-</ul>
+  <head>
+		
+		<!-- Webpage Title -->
+    <title>Hello, world!</title>
 
 <!-- 구역 내 콘텐츠 태그들 -->
 <h1>h1은 제목을 나타내는 태그입니다. 페이지마다 하나씩 꼭 써주는 게 좋아요. 그래야 구글 검색이 잘 되거든요.</h1>
-<h2>h2는 소제목입니다.</h2>
-<h3>h3~h6도 각자의 역할이 있죠. 비중은 작지만..</h3>
-<hr>
-span 태그입니다: 특정 <span style="color:red">글자</span>를 꾸밀 때 써요
-<hr>
-a 태그입니다: <a href="http://naver.com/"> 하이퍼링크 </a>
-<hr>
-img 태그입니다: <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
-<hr>
-input 태그입니다: <input type="text" />
-<hr>
-button 태그입니다: <button> 버튼입니다</button>
-<hr>
-textarea 태그입니다: <textarea>나는 무엇일까요?</textarea>
-<hr>
-textarea 태그입니다: <textarea>나는 무엇일까요?</textarea>
-</body>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS : css를 넣었기 때문에 <body>에서 버튼기능을 넣을 수 있다 -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		
+		<!-- JS -->		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
+    <!-- <h숫자> 블라블라 </h숫자>를 하면 '글씨크기'와 '엔터 기능'을 한다-->
+    <h2><button type="button" class="btn btn-oytline-primary">버튼 </button></h2>
+  </body>
 </html>
